docs/apache-airflow-providers-google/8.3.0/_sources/_api/airflow/providers/google/cloud/links/dataplex/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataplex`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataplex

.. autoapi-nested-parse::

   This module contains Google Dataplex links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataplex.DataplexTaskLink
   airflow.providers.google.cloud.links.dataplex.DataplexTasksLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataplex.DATAPLEX_BASE_LINK
   airflow.providers.google.cloud.links.dataplex.DATAPLEX_TASK_LINK
   airflow.providers.google.cloud.links.dataplex.DATAPLEX_TASKS_LINK


.. py:data:: DATAPLEX_BASE_LINK
   :annotation: = https://console.cloud.google.com/dataplex/process/tasks

   

.. py:data:: DATAPLEX_TASK_LINK
   

   

.. py:data:: DATAPLEX_TASKS_LINK
   

   

.. py:class:: DataplexTaskLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataplex Task link

   .. py:attribute:: name
      :annotation: = Dataplex Task

      

   .. py:attribute:: key
      :annotation: = task_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: DataplexTasksLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataplex Tasks link

   .. py:attribute:: name
      :annotation: = Dataplex Tasks

      

   .. py:attribute:: key
      :annotation: = tasks_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



