docs/apache-airflow-providers-google/10.1.0/_sources/_api/airflow/providers/google/cloud/links/dataplex/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataplex`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataplex

.. autoapi-nested-parse::

   This module contains Google Dataplex links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataplex.DataplexTaskLink
   airflow.providers.google.cloud.links.dataplex.DataplexTasksLink
   airflow.providers.google.cloud.links.dataplex.DataplexLakeLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataplex.DATAPLEX_BASE_LINK
   airflow.providers.google.cloud.links.dataplex.DATAPLEX_TASK_LINK
   airflow.providers.google.cloud.links.dataplex.DATAPLEX_TASKS_LINK
   airflow.providers.google.cloud.links.dataplex.DATAPLEX_LAKE_LINK


.. py:data:: DATAPLEX_BASE_LINK
   :value: '/dataplex/process/tasks'

   

.. py:data:: DATAPLEX_TASK_LINK

   

.. py:data:: DATAPLEX_TASKS_LINK

   

.. py:data:: DATAPLEX_LAKE_LINK
   :value: 'https://console.cloud.google.com/dataplex/lakes/{lake_id};location={region}?project={project_id}'

   

.. py:class:: DataplexTaskLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataplex Task link

   .. py:attribute:: name
      :value: 'Dataplex Task'

      

   .. py:attribute:: key
      :value: 'task_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: DataplexTasksLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataplex Tasks link

   .. py:attribute:: name
      :value: 'Dataplex Tasks'

      

   .. py:attribute:: key
      :value: 'tasks_conf'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: DataplexLakeLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataplex Lake link

   .. py:attribute:: name
      :value: 'Dataplex Lake'

      

   .. py:attribute:: key
      :value: 'dataplex_lake_key'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



